Upgrade KaTeX to v0.11.0. Update README.md. Update default preferences. Add lmj 2019.8.4. Update xzl's source

--- a/database/sll/扩展网络流.md
+++ b/database/sll/扩展网络流.md
@@ -24,4 +24,4 @@
   建图:   原图中的(u->v),建边(u->v,inf)
     对于c[u]>0   建边(s->u,c[u])
     对于c[u]<0   建边(u->t,-c[u])
-  流程:   建图后跑s->t的最小割,∑c[u](c[u]>0)-最小割即为答案
+  流程:   建图后跑s->t的最小割,∑c\[u\](c\[u\]>0)-最小割即为答案
